--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 
 	<groupId>com.semanticcms</groupId>
 	<artifactId>semanticcms-theme-documentation</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0</version>
 	<packaging>jar</packaging>
 
 	<name>SemanticCMS Documentation Theme</name>
@@ -57,7 +57,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		<connection>scm:git:git://github.com/aoindustries/semanticcms-theme-documentation.git</connection>
 		<developerConnection>scm:git:git@github.com:aoindustries/semanticcms-theme-documentation.git</developerConnection>
 		<url>http://github.com/aoindustries/semanticcms-theme-documentation</url>
-		<tag>HEAD</tag>
+		<tag>semanticcms-theme-documentation-1.0</tag>
 	</scm>
 
 	<repositories>
