--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,12 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		<maven>3.0.4</maven>
 	</prerequisites>
 
+	<parent>
+		<groupId>com.semanticcms</groupId>
+		<artifactId>semanticcms</artifactId>
+		<version>1.0-SNAPSHOT</version>
+	</parent>
+
 	<groupId>com.semanticcms</groupId>
 	<artifactId>semanticcms-theme-documentation</artifactId>
 	<version>1.1-SNAPSHOT</version>
