--- a/pom.xml
+++ b/pom.xml
@@ -103,5 +103,12 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 			<artifactId>semanticcms-core-taglib</artifactId>
 			<version>1.3</version>
 		</dependency>
+		<!-- TODO: Once central "devMode" defined, remove this optional dependency -->
+		<dependency>
+			<groupId>com.semanticcms</groupId>
+			<artifactId>semanticcms-openfile-servlet</artifactId>
+			<version>1.1</version>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 </project>
