--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,12 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 			<artifactId>semanticcms-core-taglib</artifactId>
 			<version>1.3</version>
 		</dependency>
+		<!-- TODO: Remove this dependency once "Edit" is its own view -->
+		<dependency>
+			<groupId>com.semanticcms</groupId>
+			<artifactId>semanticcms-file-taglib</artifactId>
+			<version>1.1</version>
+		</dependency>
 		<!-- TODO: Once central "devMode" defined, remove this optional dependency -->
 		<dependency>
 			<groupId>com.semanticcms</groupId>
