--- a/pom.xml
+++ b/pom.xml
@@ -60,16 +60,6 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		</dependency>
 		<dependency>
 			<groupId>org.webjars</groupId>
-			<artifactId>d3js</artifactId>
-			<version>3.5.17</version>
-		</dependency>
-		<dependency>
-			<groupId>org.webjars</groupId>
-			<artifactId>dagre-d3</artifactId>
-			<version>0.4.10</version>
-		</dependency>
-		<dependency>
-			<groupId>org.webjars</groupId>
 			<artifactId>html5shiv</artifactId>
 			<version>3.7.3</version>
 		</dependency>
@@ -115,6 +105,11 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 			<artifactId>semanticcms-openfile-servlet</artifactId>
 			<version>1.1</version>
 			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>com.semanticcms</groupId>
+			<artifactId>semanticcms-pagegraph</artifactId>
+			<version>1.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 </project>
