--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,12 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 			<version>1.2</version>
 		</dependency>
 		<dependency>
+			<groupId>javax.servlet.jsp</groupId>
+			<artifactId>javax.servlet.jsp-api</artifactId>
+			<version>2.2.1</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.glassfish.web</groupId>
 			<artifactId>jstl-impl</artifactId>
 			<version>1.2</version>
