--- a/pom.xml
+++ b/pom.xml
@@ -86,11 +86,6 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		</dependency>
 		<dependency>
 			<groupId>org.webjars</groupId>
-			<artifactId>html5shiv</artifactId>
-			<version>3.7.3</version>
-		</dependency>
-		<dependency>
-			<groupId>org.webjars</groupId>
 			<artifactId>jquery</artifactId>
 			<version>2.2.4</version>
 		</dependency>
@@ -118,6 +113,11 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 			<groupId>com.semanticcms</groupId>
 			<artifactId>semanticcms-core-taglib</artifactId>
 			<version>1.6-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.semanticcms</groupId>
+			<artifactId>semanticcms-core-theme-base</artifactId>
+			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<!-- TODO: Remove this dependency once "Edit" is its own view -->
 		<dependency>
