--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,36 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		<tag>HEAD</tag>
 	</scm>
 
+	<profiles>
+		<profile>
+			<id>release</id>
+			<build>
+				<pluginManagement>
+					<plugins>
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-javadoc-plugin</artifactId>
+							<configuration>
+								<links>
+									<link>http://docs.oracle.com/javaee/6/api/</link>
+									<link>https://www.aoindustries.com/docs/ao-taglib/</link>
+									<link>https://www.aoindustries.com/docs/aocode-public/</link>
+									<link>https://semanticcms.com/core/model/apidocs/</link>
+									<link>https://semanticcms.com/core/servlet/apidocs/</link>
+									<link>https://semanticcms.com/core/taglib/apidocs/</link>
+									<link>https://semanticcms.com/core/theme-base/apidocs/</link>
+									<link>https://semanticcms.com/file/taglib/apidocs/</link>
+									<link>https://semanticcms.com/openfile/servlet/apidocs/</link>
+									<link>https://semanticcms.com/pagegraph/apidocs/</link>
+								</links>
+							</configuration>
+						</plugin>
+					</plugins>
+				</pluginManagement>
+			</build>
+		</profile>
+	</profiles>
+
 	<dependencies>
 		<dependency>
 			<groupId>javax.servlet</groupId>
