--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 
 	<groupId>com.semanticcms</groupId>
 	<artifactId>semanticcms-theme-documentation</artifactId>
-	<version>1.6.0</version>
+	<version>1.6.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>SemanticCMS Theme Documentation</name>
@@ -44,7 +44,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		<connection>scm:git:git://github.com/aoindustries/semanticcms-theme-documentation.git</connection>
 		<developerConnection>scm:git:git@github.com:aoindustries/semanticcms-theme-documentation.git</developerConnection>
 		<url>http://github.com/aoindustries/semanticcms-theme-documentation</url>
-		<tag>semanticcms-theme-documentation-1.6.0</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<profiles>
