Correctly encoding pipe within anchor for search.maven.org.  Firefox left it as pipe but it fails validation.

--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		<ul>
 			<li><a target="_top" href="https://semanticcms.com/theme-documentation/">Project Home</a></li>
 			<li><a target="_top" href="https://semanticcms.com/theme-documentation/apidocs/">API Docs</a></li>
-			<li><a target="_top" href="https://search.maven.org/#search|gav|1|g:%22com.semanticcms%22%20AND%20a:%22semanticcms-theme-documentation%22">Maven Central Repository</a></li>
+			<li><a target="_top" href="https://search.maven.org/#search%7Cgav%7C1%7Cg:%22com.semanticcms%22%20AND%20a:%22semanticcms-theme-documentation%22">Maven Central Repository</a></li>
 			<li><a target="_top" href="https://github.com/aoindustries/semanticcms-theme-documentation">GitHub</a></li>
 		</ul>
 	</div>
