--- a/pom.xml
+++ b/pom.xml
@@ -26,8 +26,9 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 
 	<parent>
 		<groupId>com.semanticcms</groupId>
-		<artifactId>semanticcms</artifactId>
-		<version>1.5.1-SNAPSHOT</version>
+		<artifactId>semanticcms-parent</artifactId>
+		<version>1.0.0-SNAPSHOT</version>
+		<relativePath>../parent/pom.xml</relativePath>
 	</parent>
 
 	<groupId>com.semanticcms</groupId>
