--- a/book/pom.xml
+++ b/book/pom.xml
@@ -33,7 +33,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 
 	<groupId>com.semanticcms</groupId>
 	<artifactId>semanticcms-theme-documentation-book</artifactId>
-	<version>1.6.1</version>
+	<version>1.6.2-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<properties>
@@ -60,7 +60,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		<connection>scm:git:git://github.com/aoindustries/${documented.artifactId}.git</connection>
 		<developerConnection>scm:git:git@github.com:aoindustries/${documented.artifactId}.git</developerConnection>
 		<url>${documented.scm.url}</url>
-		<tag>semanticcms-theme-documentation-book-1.6.1</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<dependencies>
