--- a/pom.xml
+++ b/pom.xml
@@ -161,7 +161,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		<dependency>
 			<groupId>com.semanticcms</groupId>
 			<artifactId>semanticcms-core-theme-base</artifactId>
-			<version>1.2.1</version>
+			<version>1.2.2-SNAPSHOT</version>
 		</dependency>
 		<!-- TODO: Remove this dependency once "Edit" is its own view -->
 		<dependency>
@@ -179,7 +179,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		<dependency>
 			<groupId>com.semanticcms</groupId>
 			<artifactId>semanticcms-pagegraph</artifactId>
-			<version>1.3.2</version>
+			<version>1.3.3-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 </project>
