Fixed cross-project linking of javadocs.

--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 							<artifactId>maven-javadoc-plugin</artifactId>
 							<configuration>
 								<links>
+									<link>${javac.link.javaApi}</link>
 									<link>${javac.link.javaeeApi.6}</link>
 									<link>https://aoindustries.com/ao-taglib/apidocs/</link>
 									<link>https://aoindustries.com/aocode-public/apidocs/</link>
