--- a/book/pom.xml
+++ b/book/pom.xml
@@ -132,7 +132,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		<dependency>
 			<groupId>com.semanticcms</groupId>
 			<artifactId>semanticcms-theme-documentation</artifactId>
-			<version>1.6.2</version>
+			<version>1.6.3-SNAPSHOT</version>
 			<type>pom</type>
 			<scope>provided</scope>
 			<optional>true</optional>
