Fixed cross-project linking of javadocs (really this time).
The issue was our redirects from */apidocs/ to */apidocs/index.html
were interacting with a Maven plugin bug:

[MJAVADOC-539] Upgrading plugin from 3.0.0 to 3.0.1 and 3.1.0 breaks certain external javadoc links

https://issues.apache.org/jira/browse/MJAVADOC-539

--- a/pom.xml
+++ b/pom.xml
@@ -67,15 +67,15 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 							<links>
 								<link>${javac.link.javaApi}</link>
 								<link>${javac.link.javaeeApi.6}</link>
-								<link>https://aoindustries.com/ao-taglib/apidocs</link>
-								<link>https://aoindustries.com/aocode-public/apidocs</link>
-								<link>https://semanticcms.com/core/model/apidocs</link>
-								<link>https://semanticcms.com/core/servlet/apidocs</link>
-								<link>https://semanticcms.com/core/taglib/apidocs</link>
-								<link>https://semanticcms.com/core/theme-base/apidocs</link>
-								<link>https://semanticcms.com/file/taglib/apidocs</link>
-								<link>https://semanticcms.com/openfile/servlet/apidocs</link>
-								<link>https://semanticcms.com/pagegraph/apidocs</link>
+								<link>https://aoindustries.com/ao-taglib/apidocs/</link>
+								<link>https://aoindustries.com/aocode-public/apidocs/</link>
+								<link>https://semanticcms.com/core/model/apidocs/</link>
+								<link>https://semanticcms.com/core/servlet/apidocs/</link>
+								<link>https://semanticcms.com/core/taglib/apidocs/</link>
+								<link>https://semanticcms.com/core/theme-base/apidocs/</link>
+								<link>https://semanticcms.com/file/taglib/apidocs/</link>
+								<link>https://semanticcms.com/openfile/servlet/apidocs/</link>
+								<link>https://semanticcms.com/pagegraph/apidocs/</link>
 							</links>
 						</configuration>
 					</plugin>
