Removed " 1" suffix from project names for current production 1.x branches

--- a/book/pom.xml
+++ b/book/pom.xml
@@ -37,7 +37,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		<documented.groupId>com.semanticcms</documented.groupId><documented.artifactId>semanticcms-theme-documentation</documented.artifactId>
 		<documented.javaVersion>1.7</documented.javaVersion>
 		<documented.javac.link.javaApi>${javac.link.javaApi.jdk7}</documented.javac.link.javaApi>
-		<documented.name>SemanticCMS 1 Theme Documentation</documented.name>
+		<documented.name>SemanticCMS Theme Documentation</documented.name>
 		<documented.shortTitle>Theme Documentation</documented.shortTitle>
 		<documented.url>https://semanticcms.com/theme-documentation/</documented.url>
 		<documented.description>SemanticCMS theme tailored for technical documentation.</documented.description>
