--- a/book/pom.xml
+++ b/book/pom.xml
@@ -37,7 +37,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		<documented.groupId>com.semanticcms</documented.groupId><documented.artifactId>semanticcms-theme-documentation</documented.artifactId>
 		<documented.javaVersion>1.7</documented.javaVersion>
 		<documented.javac.link.javaApi>${javac.link.javaApi.jdk7}</documented.javac.link.javaApi>
-		<documented.name>SemanticCMS 2 Theme Documentation</documented.name>
+		<documented.name>SemanticCMS Theme Documentation²</documented.name>
 		<documented.shortTitle>Theme Documentation</documented.shortTitle>
 		<documented.url>https://semanticcms.com/theme-documentation/</documented.url>
 		<documented.description>SemanticCMS theme tailored for technical documentation.</documented.description>
@@ -91,7 +91,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 			<groupId>com.aoindustries</groupId><artifactId>ao-badges</artifactId><version>2.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>com.aoindustries</groupId><artifactId>ao-taglib</artifactId><version>3.0.0-validation-SNAPSHOT</version>
+			<groupId>com.aoindustries</groupId><artifactId>ao-taglib</artifactId><version>3.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.semanticcms</groupId><artifactId>semanticcms-changelog-taglib</artifactId><version>2.0.0-SNAPSHOT</version>
