Reduced use of property substitutions in pom.xml.
This is to help 3rd-party parsers that fail to perform full Maven-compatible substitutions.

--- a/pom.xml
+++ b/pom.xml
@@ -54,9 +54,9 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 
 	<scm>
 		<!-- Can't inherit due to multi-module -->
-		<connection>scm:git:git://github.com/aoindustries/${project.artifactId}.git</connection>
-		<developerConnection>scm:git:git@github.com:aoindustries/${project.artifactId}.git</developerConnection>
-		<url>https://github.com/aoindustries/${project.artifactId}</url>
+		<connection>scm:git:git://github.com/aoindustries/semanticcms-theme-documentation.git</connection>
+		<developerConnection>scm:git:git@github.com:aoindustries/semanticcms-theme-documentation.git</developerConnection>
+		<url>https://github.com/aoindustries/semanticcms-theme-documentation</url>
 		<tag>HEAD</tag>
 	</scm>
 
@@ -102,7 +102,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		<dependencies>
 			<!-- Java EE -->
 			<dependency>
-				<groupId>com.aoindustries</groupId><artifactId>javaee-web-api-bom</artifactId><version>6.0.0${POST-SNAPSHOT}</version>
+				<groupId>com.aoindustries</groupId><artifactId>javaee-web-api-bom</artifactId><version>6.0.1-SNAPSHOT<!-- ${POST-SNAPSHOT} --></version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
