Changed default Java version from 1.7 to 1.8 and refactored build properties

--- a/pom.xml
+++ b/pom.xml
@@ -33,10 +33,6 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 	<packaging>bundle</packaging>
 
 	<properties>
-		<javaVersion>1.8</javaVersion>
-		<compiler.bootclasspath>${bootclasspath.jdk8}</compiler.bootclasspath>
-		<javac.bootclasspath>${bootclasspath.jdk8}</javac.bootclasspath>
-		<javac.link.javaApi>${javac.link.javaApi.jdk8}</javac.link.javaApi>
 		<shortTitle>Theme Documentation</shortTitle>
 		<description.html><![CDATA[<a target="_top" href="https://semanticcms.com/">SemanticCMS</a> theme tailored for technical documentation.]]></description.html>
 		<javadoc.modules><![CDATA[<div style="float:left; margin: 0 1em">
@@ -69,9 +65,9 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 						<groupId>org.apache.maven.plugins</groupId><artifactId>maven-javadoc-plugin</artifactId>
 						<configuration>
 							<links>
-								<link>${javac.link.javaApi}</link>
+								<link>${javadoc.link.javase}</link>
 								<!-- Java EE -->
-								<link>${javac.link.javaeeApi.6}</link>
+								<link>${javadoc.link.javaee}</link>
 								<!-- Direct -->
 								<link>https://aoindustries.com/ao-lang/apidocs/</link>
 								<link>https://aoindustries.com/ao-net-types/apidocs/</link>
