--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,11 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		<tag>HEAD</tag>
 	</scm>
 
+	<issueManagement>
+		<system>GitHub Issues</system>
+		<url>https://github.com/aoindustries/semanticcms-theme-documentation/issues</url>
+	</issueManagement>
+
 	<profiles>
 		<profile>
 			<id>release</id>
